cleaned up locations of "modifiedAt" and made it available in DevFormDataEntry+dialog Files modified - [pages-config.json,CompanyForms.html,DevFormDataEntry.variables.json,DevFormDataEntry.html,UserClosedForms.html,UserOpenForms.html]

--- a/src/main/webapp/pages/UserClosedForms/UserClosedForms.html
+++ b/src/main/webapp/pages/UserClosedForms/UserClosedForms.html
@@ -20,8 +20,8 @@
                                 <wm-grid-column binding="municipalityGroups.municipalities.municipalityName" caption="Municipality" type="string" readonly="true" show="true"></wm-grid-column>
                                 <wm-grid-column binding="vendor.companyName" caption="Primary Vendor" type="string" readonly="true" show="true"></wm-grid-column>
                                 <wm-grid-column binding="users.email" caption="Created By" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="modifiedAt" caption="Date Modified" type="timestamp" readonly="true" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date"></wm-grid-column>
                                 <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" readonly="true" show="true"></wm-grid-column>
-                                <wm-grid-column binding="modifiedAt" caption="Modified At" type="timestamp" readonly="true" datepattern="yyyy-MM-dd hh:mm a" formatpattern="toDate" show="true" filterwidget="datetime"></wm-grid-column>
                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                 <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_Forms.invoke()" disabled="false"></wm-grid-row-action>
                             </wm-grid>
